<resources>
    <string name="app_name">mobile</string>
    <string name="track_event">Track Event</string>
    <string name="activity_2">Activity 2</string>
    <string name="back">Back</string>
    <string name="feature_name">Feature Name</string>
    <string name="feature_list">Feature List</string>
    <string name="features">Features</string>
    <string name="tealium_enabled">Enabled</string>
    <string name="flush">Flush</string>
    <string name="decision_type">Decision Type</string>
    <string name="implicit">Implicit</string>
    <string name="explicit">Explicit</string>
    <string name="consent_purposes">Consent Purposes</string>
    <string name="save_consent_settings">Save Consent Settings</string>
    <string name="consent_settings">Consent Settings</string>
    <string name="moments_attr_label">Label</string>
    <string name="fetch_engine_response">Fetch Engine Response</string>
    <string name="engine_id">Enter Engine ID</string>
    <string name="join_trace">Join Trace</string>
    <string name="leave_trace">Leave Trace</string>
    <string name="trace_id_hint">trace id</string>
</resources>