<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/edit_text_trace_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trace_id_hint" />

    <Button
        android:id="@+id/btn_join_trace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_trace" />

    <Button
        android:id="@+id/btn_leave_trace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/leave_trace" />


</LinearLayout>